<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.MainActivity">

    <data>

        <variable
            name="bridge"
            type="ir.topcoders.pol.data.model.Bridge" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="rankTypeTitle,g_rankType,g_rankType1,g_rankType2,g_rankType3,g_rankType4,g_rankType5,g_rankType6" />

        <TextView
            android:id="@+id/rankTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rank_type"
            app:layout_constraintBaseline_toBaselineOf="@+id/rankTypeValue"
            app:layout_constraintRight_toRightOf="parent" />

        <Spinner
            android:id="@+id/rankTypeValue"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/rank_list"
            android:prompt="@string/title_rank_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/rankTypeTitle"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="16dp" />


        <TextView
            android:id="@+id/g_rankType"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankTypeValue"/>

        <TextView
            android:id="@+id/g_rankType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g_rankType"/>

        <TextView
            android:id="@+id/g_rankType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g_rankType1"/>

        <TextView
            android:id="@+id/g_rankType3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g_rankType2"/>

        <TextView
            android:id="@+id/g_rankType4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g_rankType3"/>

        <TextView
            android:id="@+id/g_rankType5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g_rankType4"/>

        <TextView
            android:id="@+id/g_rankType6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g_rank_type6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g_rankType5"/>

    </android.support.constraint.ConstraintLayout>

</layout>