<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.MainActivity">

    <data>

        <variable
            name="damage"
            type="ir.topcoders.pol.data.model.BridgeDamage" />

        <import type="ir.topcoders.pol.utils.DamageUtils" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="elementTitle,damageTitle,damageLevelTitle,descriptionTitle,investigation_statusTitle,investigation_problemTitle" />

        <TextView
            android:id="@+id/elementTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_element"
            app:layout_constraintBaseline_toBaselineOf="@+id/elementValue"
            app:layout_constraintRight_toRightOf="parent" />

        <Spinner
            android:id="@+id/elementValue"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:entries="@array/element_list"
            android:prompt="@string/title_element"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/damageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_damage"
            app:layout_constraintBaseline_toBaselineOf="@+id/damageValue"
            app:layout_constraintRight_toRightOf="parent" />

        <Spinner
            android:id="@+id/damageValue"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:prompt="@string/title_damage"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/elementValue" />

        <TextView
            android:id="@+id/damageLevelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_damage_level"
            app:layout_constraintBaseline_toBaselineOf="@+id/damageLevelValue"
            app:layout_constraintRight_toRightOf="parent" />

        <Spinner
            android:id="@+id/damageLevelValue"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:entries="@array/damage_level_list"
            android:prompt="@string/title_damage_level"
            android:selectedItemPosition="@={damage.damageLevel}"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/damageValue" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="توضیحات"
            app:layout_constraintBaseline_toBaselineOf="@+id/descriptionValue"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/descriptionValue"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:singleLine="false"
            android:text="@={damage.description}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/damageLevelValue" />


        <TextView
            android:id="@+id/investigation_statusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_investigation_staus"
            app:layout_constraintBaseline_toBaselineOf="@+id/investigation_statusValue"
            app:layout_constraintRight_toRightOf="parent" />


        <Spinner
            android:id="@+id/investigation_statusValue"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:entries="@array/investigation_status_list"
            android:prompt="@string/title_investigation_staus"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/descriptionValue" />

        <TextView
            android:id="@+id/investigation_problemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_investigation_problem"
            app:layout_constraintBaseline_toBaselineOf="@+id/investigation_problemValue"
            app:layout_constraintRight_toRightOf="parent" />


        <Spinner
            android:id="@+id/investigation_problemValue"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:entries="@array/investigation_problem_list"
            android:prompt="@string/title_investigation_problem"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/investigation_statusValue" />


    </android.support.constraint.ConstraintLayout>

</layout>